// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RichTextView should be rendered correctly 1`] = `
<div
  className="typographyPromo typography-14"
>
  <p>
    Test
  </p>
</div>
`;

exports[`RichTextView should be rendered correctly with extra props 1`] = `
<div
  className="typographyPromo typography-16"
>
  <p>
    Test
  </p>
</div>
`;
